// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderWrapper to match snapshot active 1`] = `
<body>
  <div>
    <div
      class="loader-wrapper "
    />
  </div>
</body>
`;

exports[`LoaderWrapper to match snapshot disabled 1`] = `
<body>
  <div>
    <div
      class="loader-wrapper "
    >
      <div
        class="loader-wrapper-overlay"
      >
        <div
          class="spinner-row d-flex align-items-center"
        >
          <div
            class="spinner-border"
            role="status"
          >
            <span
              class="sr-only"
            >
              Loading...
            </span>
          </div>
            
          Loading
        </div>
      </div>
      This is the content
    </div>
  </div>
</body>
`;
